--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -8,4 +8,11 @@
         android:inputType="text"
         android:singleLine="true"/>
 
+    <ListPreference
+        android:title="@string/pref_units_label"
+        android:key="@string/pref_units_key"
+        android:entries="@array/pref_unit_array_human"
+        android:entryValues="@array/pref_unit_array"
+        android:defaultValue="@string/pref_units_default"/>
+
 </PreferenceScreen>
