--- a/app/src/main/res/menu/detail.xml
+++ b/app/src/main/res/menu/detail.xml
@@ -4,4 +4,11 @@
     tools:context="net.tbennett.mysunshine.DetailActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
+
+    <item
+        android:id="@+id/menu_item_share"
+        app:showAsAction="always"
+        android:title="@string/share_menu_label"
+        app:actionProviderClass=
+            "android.support.v7.widget.ShareActionProvider" />
 </menu>
